optimization & add analyzers